feat: add callback to Promise I/O 插件

--- a/source/_posts/2020-06-19-NodeJS回顾.md
+++ b/source/_posts/2020-06-19-NodeJS回顾.md
@@ -1613,3 +1613,347 @@ cbConverPromiseTest();
 
 
 
+## I/O
+
+I/O即Input/Output，输入输出端口，是信息处理系统与外部世界之间的通信，输入手是系统接收的信号或数据，输出的则是从其发送的信号或数据
+
+一次I/O操作分为等待资源，使用资源两个阶段，常见的词网络I/O,磁盘I/O
+
+### 阻塞与非阻塞I/O
+
+是对于操作系统内核而言的，发生在等待资源阶段，根据发起的I/O请求是否阻塞来判断
+
+阻塞I/O：这种模式下一个用户进程在发起一个I/O操作之后，只有接收到响应或者超时时才可进行处理其他事情，否则I/O将会一直阻塞。以读取磁盘上的一段文件为例子，系统内核在完成磁盘寻道、读取数据、复制数据到内存之中之后，这个调用才算完成。阻塞的这段时间对CPU资源是浪费的。
+
+非阻塞I/O：这种模式下一个用户进程发起一个I/O操作之后，如果数据没有就绪，会立刻返回（标志数据资源不可用），此时CPU时间片可以用来做一些其他事情。
+
+### 同步与异步I/O
+
+同步与异步I/O发生在使用资源阶段。
+
+同步I/O：应用发送或接受数据后，如果不返回，继续等待（此处发生阻塞），直到数据成功或失败返回。
+
+异步I/O：应用发送或接受数据后立刻返回，数据写入OS缓存，由OS完成数据发送或接收，并返回成功或者失败的信息给应用，NodeJs就是典型异步编程的例子。
+
+### 用户空间与内核空间
+
+操作系统为了多个应用同时运行，需要保证不同进程相对独立、内核的安全。所以操作系统把内存空间划分为用户空、内核空间两部分。用户空间存放用户程序代码和数据，而内核空间则存放内核代码和数据。
+
+OSI七层模型与网际网协议族图：传输层之上（会话层、表示层、应用层）为用户空间（Web客户端、浏览器、FTP），下四层（传输层，网络层，数据链路层，物理层）为内核空间，例如传输层的TCP/UDP就对应内核空间。
+
+### 操作系统I/O模型
+
+#### 同步阻塞IO
+
+当进程调用 recvfrom() 函数的时候阻塞，**应用程序**开始系统调用，在**系统内核**数据就绪，将数据从内核中拷贝出来后结束。这个过程应用程序都处于等待状态，不能做其他事情，直到将数据拷贝到用户空间或出错才返回，我们称之为阻塞I/O模式。
+
+### 同步非阻塞I/O
+
+想对于同步非阻塞I/O模式，同步非阻塞I/O在 每次调用之后，如果数据没有就绪就会立即返回，之后重复调用检查I/O操作是否就绪，这对CPU资源非常浪费，直到数据就绪将数据从内核拷贝到用户空间，返回成功指示到应用程序。
+
+### I/O多路复用
+
+链接（Socket）并发大的时候，上面的两种就不适合了，前面一个处理不完，后面的就只能干等。多路复用技术先进行select数据就绪后，调用recvfrom进行真正的I/O读写操作。高级之处在于能够一个线程同时处理多个Socket
+
+多路复用中的I/O通常指的是网络I/O,多路指的是多个Socker链接，复用指操作系统进行运算调度最小单位线程，整体的意思就是多个网络I/O复用一个或少量线程来处理Socket
+
+I/O多路复用的四种实现：select/poll/epoll/kqueue
+
+- select，通过轮询检查在文件描述符上设置的标志位来进行判断，select的轮询相当于在数据库中查找一条记录没有建立索引，对所有的socket进行全部遍历，这对CPU是浪费的。另外select还有一个限制，对于单个线程所能打开的文件描述符最大只有1024，那么基于select的轮询技术最多也只能很好的处理1000并发的吞吐量
+- poll,poll和select在实现上没有什么本质上的区别，poll基于链表来实现，没有了最大链接1024的限制。当文件描述符多了之后，每次调用都会对链接进行线性遍历，性能也是十分低下的。
+- epoll。是linux下效率最高的I/O事件通知机制，没有最大链接限制，通过callback回调通知机制，不再是每次调用对链接进行线性遍历，这样就不会随着文件描述符的增加导致效率下降。1GB内存的机器上大概能监听10w个端口，远超过select1024的限制
+- kqueue，与epoll类似，仅存于FreeBSD(一种类UNIX操作系统)
+
+### 信号驱动IO
+
+仅在Unix上支持，与I/O多路复用相比避免了select的阻塞轮询，应用程序进行系统调用后立即返回，处理其他事情，在数据就绪之后系统会发送一个SIGIO信号到应用程序，应用程序开始读取数据
+
+### 异步IO模型
+
+目前最理想形式的一种，应用程序发起系统调用后无需等待直接返回当前调用状态，进行后续的其他任务，结果由内核完成I/O操作之后通过回调通知到应用程序，中间没有阻塞过程。Linux2.6增加了AIO，但是很少系统能够实现
+
+### 轮询技术Select 与 Epoll的区别
+
+**操作方式上**
+
+- select采用了线性遍历来查找，链接多了之后在一个庞大的数组中每次遍历来锁定一个链接，非常消耗性能
+- epoll则不需要遍历，采用的是回调机制，可以看作是一个HashTable，来锁定一个对象非常快。
+
+**文件描述符限制**
+
+- 对于文件描述符最大链接数select限制为1024
+- epoll则没有这个限制，通常在1GB内存的机器上所能支持的连接数为10W左右。
+
+**操作系统的支持**
+
+目前高性能的Web服务器Nginx是基于epoll来实现高并发的
+
+### Nodejs中的内存管理和V8垃圾回收机制
+
+在Nodejs中，关于垃圾回收、内存释放不需要像C语言创建一个对象之后需手动创建一个delete/free的一个操作之后进行GC,Nodejs与java一样，由虚拟机进行内存自动管理。
+
+### NodeJs中的GC
+
+node.js是基于Chrome v8引擎的javascript运行环境，V8就是虚拟机。
+
+### 垃圾回收内存管理实践
+
+#### 内存泄露
+
+node提供process.memoryUsage方法来查看当前进程内存使用情况，单位为节
+
+- ress(resident set size)：RAM中保存的进程占用的内存部分，包括代码本身、栈、堆
+- heapTotal：堆中总共申请到的内存量
+- heapUsed：堆中目前用到的内存量，判断内存泄露主要以这个字节为准
+- external：V8引擎内存C++对象占用的内存
+
+```javascript
+/**
+*单位字节格式为MB输出
+*/
+
+const format = function(bytes)
+    return (bytes/1024/1024).toFixed(2)+' MB'
+}
+
+/*
+*封装print方法输出内存占用信息
+*/
+const print = function(){
+    const memoryUsage = process.memoryUsage();
+    
+    console.log(
+        JSON.stringify({
+            res:format(memoryUsage.rss),
+            heapTotal:format(memoryUsage.heapTotal),
+            heapUsed:format(memoryUsage.heapUsed),
+            external:format(memoryUsage.external),
+        })
+    )
+}
+```
+
+#### 内存泄露的例子
+
+堆用来存放对象引用类型，例如字符串、对象、在代码中创建一个Fruit存放在堆中
+
+```javascript
+// example.js
+function Quantity(num){
+    if(num){
+        return new Array(num * 1024 * 1024)
+    }
+    return num;
+}
+function Fruit(name,quantity){
+    this.name = name;
+    this.quantity = new Quantity(quantity);
+}
+
+let apple = new Fruit('apple');
+print();
+let banane = new Fruit('banane',20);
+print();
+// 执行代码，aplle对象heapUsed使用仅有4.21M，而banana由于quantity属性创建了一个很大数组空间导致heapUsed飙升到164.21M。
+// {"rss":"19.94 MB","heapTotal":"6.83 MB","heapUsed":"4.21 MB","external":"0.01 MB"}
+// {"rss":"180.04 MB","heapTotal":"166.84 MB","heapUsed":"164.24 MB","external":"0.01 MB"}
+```
+
+#### 手动执行垃圾回收内存释放
+
+```javascript
+banana = null;
+global.gc();
+print(); 
+// 执行 node --expose-gc xxx.js --expose-gc参数表示运行手动执行垃圾回收机制，将banana对象赋值null进行GC
+// {"rss":"52.48 MB","heapTotal":"9.33 MB","heapUsed":"3.97 MB","external":"0.01 MB"}
+// heapUsed的使用已经降了下来
+```
+
+### V8垃圾回收机制
+
+垃圾回收指的是回收那些在应用程序中不再引用的对象，当一个对象无法从根节点访问这个对象就会作为垃圾回收的候选对象。这里的根对象可以为全局对象、局部变量，无法从根节点访问指的也就是不会再被其他活动对象所引用。
+
+#### V8堆内存限制
+
+在V8中限制64位机制大约为1.4G，32位的大概是0.7G，对于一些大内存的操作需要谨慎否则超出V8内存限制会造成进程退出
+
+内存溢出边界的例子：
+
+```javascript
+// overflow.js
+const format = function(bytes){
+    return (bytes / 1024 / 1024).toFixed(2)+' MB';
+}
+
+const print = function(){
+    const memoryUsage = process.memoryUsage();
+    console.log(
+        `heapTotal:${format(memoryUsage.heapTotal)},
+		 heapUsed: ${format(memoryUsage.heapUsed)}`
+    )
+}
+
+const total = [];
+setInterval(()=>{
+    total.push(new Array(20*1024*1024)) // 大内存占用
+    print();
+},1000)
+```
+
+total为全局变量每次增长大概在160M左右且不会被回收，在接近V8边界时无法分配内存导致进程内存溢出
+
+```shell
+$ node overflow.js
+heapTotal: 166.84 MB, heapUsed: 164.23 MB
+heapTotal: 326.85 MB, heapUsed: 324.26 MB
+heapTotal: 487.36 MB, heapUsed: 484.27 MB
+heapTotal: 649.38 MB, heapUsed: 643.98 MB
+heapTotal: 809.39 MB, heapUsed: 803.98 MB
+heapTotal: 969.40 MB, heapUsed: 963.98 MB
+heapTotal: 1129.41 MB, heapUsed: 1123.96 MB
+heapTotal: 1289.42 MB, heapUsed: 1283.96 MB
+
+<--- Last few GCs --->
+
+[87581:0x103800000]    11257 ms: Mark-sweep 1283.9 (1290.9) -> 1283.9 (1290.9) MB, 512.1 / 0.0 ms  allocation failure GC in old space requested
+[87581:0x103800000]    11768 ms: Mark-sweep 1283.9 (1290.9) -> 1283.9 (1287.9) MB, 510.7 / 0.0 ms  last resort GC in old space requested
+[87581:0x103800000]    12263 ms: Mark-sweep 1283.9 (1287.9) -> 1283.9 (1287.9) MB, 495.3 / 0.0 ms  last resort GC in old space requested
+
+
+<--- JS stacktrace --->
+```
+
+v8提供了两个参数仅在启用阶段调整内存限制大小，分别为调整老生代、新生代：
+
+- --max-old-space-size=2048
+- --max-new-space-size=2048
+
+内存不是越大越好，一方面是服务器资源昂贵，另外是V8以1.5G的堆内存进行一次小的垃圾回收大约需要50毫秒以上时间，会导致JavaScript进程暂停，这也是最主要的一方面。
+
+#### 新生代与老生代
+
+**新生代空间**
+
+由于新空间的垃圾回收机制很频繁，所以处理方式必须非常快，采用Scavenge算法，这是一种复制算法，新生代空间会被一分为二划分为两个相等大小的from-space和to-space工作方式是将from space中存活的对象复制出来，然后移动它们到to space 中或者被提升到老生代空间中，对于from space中没有存活的对象将会被释放，完成这些复制后再将from space和to space进行互换。
+
+Scavenge算法适用少量内存的垃圾回收，但是有很大的空间开销，对于新生代少量内存是可以接受的
+
+**老生代空间**
+
+新生代空间在垃圾回收满足于一定的条件（是否经过Scavenge空间、to space内存占比）会被晋升到老生代空间中，在老生代空间中的对象都已经至少经历了一次或者多次的回收所以它们的存活概率会更大。在使用Scavenge算法会有两个缺点，一是将会重复的复制存活对象使得效率低下，二是对空间资源的浪费，所以在老生代空间中采用了 Mark-Sweep（标记清除）和Mark-Compact（标记整理）算法
+
+Mark-Sweep处理时分为标记、清除两个步骤，与Scavenge算法只复制活对象相反的是在老生代空间中由于活对象占多数Mark-Sweep在标记阶段遍历堆中的所有对象仅标记活对象把未标记的死对象清除，这时一次标记清除就已经完成了。有一个问题是被清除的对象遍布于各内存地址，产生很多内存碎片
+
+Mark-Compact(标记整理算法)为了解决内存碎片问题，在其工作过程中将活着的对象往一端移动，这时内存空间是紧凑的，移动完成之后，直接整理边界之外的内存。
+
+#### 小结
+
+V8使用了不同的垃圾回收算法Scavenge/Mark-Sweep/Mark-Compact.这三种垃圾回收算法都避免不了在进行垃圾回收时需要将应用程序暂停，待垃圾回收完成之后在恢复应用逻辑，对于新生代空间来说由于很快所以影响不大，但是对于老生代空间由于存活对象较多，停顿还是会造成影响的，因此V8又新增了增量标记的方式减少停顿时间。
+
+### 内存泄露
+
+内存泄露（Memory Leak）是指程序中已动态分配的堆内存由于某种原因程序未释放或无法释放，造成系统内存的浪费，导致程序运行速度减慢甚至系统奔溃等严重后果。
+
+**全局变量**，未声明的变量或挂在全局global下的变量不会自动回收，将会常驻内存直到直到进程退出才会释放，除非通过delete或者重新赋值为undefined/null解决之间的引用关系，才会被回收。
+
+**闭包**，也是一个常见的内存泄露问题，闭包会引用父级函数中的变量，如果闭包得不到释放，闭包引用的父级变量也不会释放从而导致内存泄露
+
+例如：
+
+```javascript
+var theThing = null;
+var replaceThing = function(){
+    var originalThing = theThing;
+    var unused = function(){
+        if(originalThing){
+            console.log('hi')
+        }
+        theThing = {
+            longStr:new Array(1000000).join('*'),
+            someMethod:function(){
+                console.log(someMessage)
+            }
+        }
+    }
+}
+setInterval(replaceThing,1000)
+```
+
+代码运行时，每次执行replaceThing方法都会生成一个新的对象，但是之前的对象没有释放导致的内存泄露。
+
+**慎将内存作为缓存**
+
+通过内存来做缓存是最快的实现方式，缓存中的存储的键越多，长期存活的对象就越多，垃圾回收时将这些对象做无用功。
+
+```javascript
+// 下面一个获取用户Token的例子，memoryStore对象会随着用户数的增加而增长，当启动多个线程或者部署在多台机器会造成每个进程都保存一份，显然是资源的浪费，最好是通过Redis做共享
+const memoryStore = new Map();
+
+exports.getUserToken = function(key){
+    const token = memoryStore.get(key);
+    if(token && Date.now() - token.now > 2 * 60){
+        return token;
+    }
+    
+    const dbToken = db.get(key);
+    memoryStore.set(key,{
+        now:Date.now(),
+        val:dbToken
+    });
+    return token;
+}
+```
+
+**模块私有变量内存常驻**
+
+加载一个模块代码之前，Nodejs会使用一个如下的函数封装器将其封装，保证了顶层的变量（var,const,let）在模块范围内，而不是全局对象。这个时候就会形成一个闭包，在require时会被加载一次，将exports对象保存在内存中，直到进程退出才会回收，这个将会导致的是内存常驻，所以避免一些没必要的模块加载，否则也会造成内存增加
+
+```javascript
+(function(exports,require,module,__filename,__dirname){
+    // 模块的代码实际上在这里
+})
+// 所以建议对模块的引用仅在头部初次加载之后用const缓存起来，而不是在使用时每次都去加载一起。
+// 推荐
+const a = require('a.js');
+function test(){
+    a.run();
+}
+
+// 不推荐
+function test(){
+    require('a.js').run();
+}
+```
+
+**事件反复监听**
+
+NodeJs中对一个事件反复监听则会报下面的错误，实际上使用的EventEmitter类，包含一个listeners数组，默认为10个监听器超出这个数则会报警，用于发现内存泄露，也可以通过emitter.setMaxListeners()方法为指定的EventEmitter实例修改限制
+
+```shell
+MaxListenersExceededWarning：Possible EventEmitter memory leak detected, 11 connect added.Use emitter.setMaxListeners() to increase limit
+```
+
+**其他注意事项**
+
+使用定时器setInterval时记得使用对应的clearInterval进行清除。因为setInterval执行完之后会返回一个值且不会自动释放，另外还有map/filter等对数组进行操作，每次操作之后都会创建一个新的数组，将会占用内存，如果单纯的遍历map可以用forEach。
+
+## 插件
+
+### 缓存
+
+- `[Cache]` [memory-fs 将文件写入内存](https://github.com/webpack/memory-fs)
+- `[Cache]` [Memory Cache](https://github.com/ptarjan/node-cache#readme)
+- `[Cache]` [Node Cache](https://github.com/mpneuried/nodecache)
+
+### 定时任务
+
+- `[Schedule]` [node-schedule](https://github.com/node-schedule/node-schedule)
+- `[Schedule]` [Agenda 将Node中的定时任务存储在数据库中（官方推荐MongoDB）](https://github.com/agenda/agenda)
+- `[Schedule]` [Node.js结合RabbitMQ延迟队列实现定时任务](https://www.nodejs.red/#/docs/microservice/rabbitmq-base?id=rabbitmq延迟队列实现定时任务)
+
+### 模板引擎
+
+- `[Template]` [Ejs](https://ejs.co/)
+- `[Template]` [Handlebarsjs](https://handlebarsjs.com/)
+- `[Template]` [Jade](http://jade-lang.com/)
