feat: 性能，CPI,EventLoop,Redis

--- a/source/_posts/2020-06-19-NodeJS回顾.md
+++ b/source/_posts/2020-06-19-NodeJS回顾.md
@@ -1957,3 +1957,390 @@ MaxListenersExceededWarning：Possible EventEmitter memory leak detected, 11 con
 - `[Template]` [Ejs](https://ejs.co/)
 - `[Template]` [Handlebarsjs](https://handlebarsjs.com/)
 - `[Template]` [Jade](http://jade-lang.com/)
+
+### 框架
+
+- `[Framework]` [Express 中文版](http://www.expressjs.com.cn/)、[Express of English Version](http://www.expressjs.com.cn/)
+- `[Framework]` [Koa 中文版](https://koajs.com/)、[Koa of English Version](https://koajs.com/)
+- `[Framework]` [Egg 中文版](https://eggjs.org/zh-cn/intro/quickstart.html)、[Egg of English Version](https://eggjs.org/en/intro/quickstart.html)
+- `[Framework]` [Nest.js 中文版](https://docs.nestjs.cn/)、[Nest.js](https://docs.nestjs.com/)
+
+### ORM
+
+- `[typeorm]` [typeorm](https://typeorm.io/) 【右上角切换中文】
+- `[sequelize]` [sequelize](http://docs.sequelizejs.com/)
+- `[prisma]` [prisma](https://www.prisma.io/docs)
+
+## 性能
+
+### 指标
+
+**QPS**
+
+QPS（Query Per Second）指每秒查询量，规定时间内所能处理的流量大小，通常QPS值越大服务器的吞吐量也就越大，相对服务器负荷也会越高
+
+QPS=并发量/平均响应时间并发量 = QPS * 平均响应时间
+
+**TPS**
+
+TPS（TransactionPerSecond）指每秒事物处理量，每秒钟系统所能处理的交易或事务的数量，用来形容系统的性能。
+
+**两者区别**
+
+一次下单请求，访问一次创建接口产生一次TPS,对于服务器的请求可能会产生多次，比如查询用户地址信息、商品数据信息、商品报价信息，这些请求计入QPS,也就是产生了3次QPS
+
+### 系统扩容评价
+
+根据二八法则来评估系统扩容需要多少台机器，二八法则即20%的时间承载80%的流量，把20%的时间称为峰值时间，换算公式：
+
+```shell
+(总PV数 * 80%) / (每天描述 * 20%) = 峰值时间每秒请求数
+峰值时间内每秒请求数（QPS）/单台机器QPS = 需要的机器
+```
+
+假设有1000wPV,总共需要的QPS为多少？
+
+```shell
+(1000000 * 0.8) / (24 * 60 * 60 * 0.2) = 463(QPS)
+```
+
+假设每台机器支撑100QPS，则共需要的机器为
+
+```javascript
+463(总有QPS)/100(单机QPS) = 5(约需要5台机器)
+```
+
+## Nodejs CPU使用率
+
+### os.cups()数据指标
+
+返回的对象数组中有一个times字段，包含了user/nice/sys/idle/irq几个指标数据，分别代表CPU在用户模式、良好模式、系统模式、空闲模式、中断模式下话费的毫秒数。
+
+```powershell
+[
+  {
+    model: 'Intel(R) Core(TM) i5-4590 CPU @ 3.30GHz',
+    speed: 3292,
+    times: {
+      user: 151474100,
+      nice: 0,
+      sys: 95311197,
+      idle: 2258535287,
+      irq: 2136605
+    }
+  },
+  {
+    model: 'Intel(R) Core(TM) i5-4590 CPU @ 3.30GHz',
+    speed: 3292,
+    times: {
+      user: 84900939,
+      nice: 0,
+      sys: 65104926,
+      idle: 2355314423,
+      irq: 874869
+    }
+  },
+  {
+    model: 'Intel(R) Core(TM) i5-4590 CPU @ 3.30GHz',
+    speed: 3292,
+    times: {
+      user: 144337320,
+      nice: 0,
+      sys: 112618416,
+      idle: 2248364428,
+      irq: 699602
+    }
+  },
+  {
+    model: 'Intel(R) Core(TM) i5-4590 CPU @ 3.30GHz',
+    speed: 3292,
+    times: {
+      user: 110066333,
+      nice: 0,
+      sys: 84988268,
+      idle: 2310265437,
+      irq: 897333
+    }
+  }
+]
+```
+
+定义方法getCPUInfo用来获取系统CPU信息，提供了CPU利用率的实时监控，这个实时不是绝对的实时，会有时差，下面实现中默认设置的1秒钟，可以通过Options.ms进行调整
+
+```javascript
+const os = require('os');
+const sleep = ms => new Promise(resolve => setTimeout(resolve, ms));
+
+
+class OSUtils {
+  constructor() {
+    this.cpuUsageMSDefault = 1000; // CPU 利用率默认时间段
+  }
+
+  /**
+   * 获取CPU信息
+   * @return {Object} CPU信息
+  */
+ _getCPUInfo() {
+  const cpus = os.cpus();
+  let user = 0,
+    nice = 0,
+    sys = 0,
+    idle = 0,
+    irq = 0,
+    total = 0;
+
+  for (let cpu in cpus) {
+    const times = cpus[cpu].times;
+    user += times.user;
+    nice += times.nice;
+    sys += times.sys;
+    idle += times.idle;
+    irq += times.irq;
+  }
+  total += user + nice + sys + idle + irq;
+
+  return {
+    user,
+    sys,
+    idle,
+    total
+  }
+}
+
+  /**
+   * 获取某时间段CPU利用率
+   * @param {Number} Options.ms [时间段，默认是1000ms，即1秒钟]
+   * @param {Boolean} Options.percentage [true（以百分比结果返回）| false]
+   * @return {Promise}
+  */
+ async getCPUUsage(options = {}) {
+    const that = this;
+    let { cpuUsageMS, percentage } = options;
+    cpuUsageMS = cpuUsageMS || that.cpuUsageMSDefault;
+    const t1 = that._getCPUInfo(); // t1时间点的 CPU信息
+    await sleep(cpuUsageMS);
+
+    const t2 = that._getCPUInfo(); // t2时间点的 CPU信息
+    const idle = t2.idle - t1.idle;
+    const total = t2.total - t1.total;
+    let usage = 1 - idle / total;
+
+    if (percentage) usage = (usage * 100.0).toFixed(2) + '%';
+    return usage;
+  }
+
+}
+```
+
+使用方式：
+
+```javascript
+
+const osUtils = new OSUtils()
+osUtils.getCPUUsage({ percentage: true }).then(cpuUsage => {
+  console.log('CPU 利用率', cpuUsage)
+});
+```
+
+## NodeJs与Event Loop
+
+node之前的世界，多线程服务器中，Web应用程序是用一个client/server(客户端/服务端)模式所编写的，其中client将向server请求资源并且将会根据这个资源以响应，server仅在client请求时做出响应，并在每次响应后关闭连接。这种模式是有效的，因为对服务器的每一个请求都需要时间和资源（内存、CPU等等），服务器必须完成上一个请求，才能接受下一个请求。需要同时处理N个请求，服务器就需要N个线程，如果有N+1个请求，就必须等N个线程中的任何一个可用。
+
+服务器中的线程不是唯一的问题，一个线程为什么不能同时处理2个或者更多请求，是因为阻塞了Input/Output操作。
+
+| 操作                | CPU时钟周期数(ticks) |
+| ------------------- | -------------------- |
+| CPU寄存器           | 3                    |
+| L1 Cache(一级缓存)  | 8                    |
+| L2 Cache(二级缓存)  | 12                   |
+| RAM(随机存取存储器) | 150                  |
+| Disk（磁盘）        | 30 000 000           |
+| NetWork（网络）     | 250 000 000          |
+
+时钟周期也称为tick/clock cycle/clock period等，指一个硬件在被使用过程中，被划分为多个时间周期，当我们需要比较不同硬件性能时，就在不同硬件上测试同一个软件，观察它们的时钟周期时间和周期指数，如果时钟周期越长、周期越多，就意味着这个硬件需要的性能较低。
+
+### Event Loop事件循环
+
+事件循环实际上是一个无限循环，并且线程里唯一可用的。
+
+```javascript
+static void StartNodeInstance(void* arg){
+    // ...
+    {
+        SealHandleScope seal(isolate);
+        bool more;
+        do{
+            v8::platform::PumpMessageLoop(default_platform,isolate);
+            more = uv_run(env->event_loop(),UV_RUN_ONCE);
+            if(mode == false){
+                v8::platform::PumpMessageLoop(default_platform,isolate);
+                EmitBeforeExit(env);
+                
+                more = uv_loop_alive(env->event_loop());
+                if(uv_run(env->event_loop),UV_RUN_NOWAIT)!=0){
+                    more = true
+                }
+            }
+        }while(more == true)
+    }
+}
+```
+
+事件循环经历6个阶段，所有阶段的执行被称为tick
+
+```shell
+timers->pending callbacks ->idle,prepare->poll->check->close callbacks
+```
+
+- timers：这个阶段执行定时器setTimeout和setInterval的回调函数
+- pending callbacks：几乎所有的回调都在这里执行，除了close回调，定时器timers阶段的回调和setImmediate
+- idle,prepare：仅在内部使用
+- poll：检索新的I/O事件，适当时Node在此处阻塞
+- check：setImmediate回调函数将在这里执行
+- close callbacks：一些准备关闭的回调函数，如 socket.on('close',...)
+
+当Event loop需要执行I/O操作时，它将从一个池（通过Libuv库）中使用系统线程，当这个作业完成时，回调将排队等待在pending callbacks阶段被执行
+
+### CPU密集型任务问题
+
+设定一个函数，给定一个数，计算在一个数组中返回N个质数
+
+```javascript
+// primes.js
+function isPrime(n) {
+  for (let i = 2, s = Math.sqrt(n); i <= s; i++)
+    if (n % i === 0) return false;
+  return n > 1;
+}
+
+function nthPrime(n) {
+  let counter = n;
+  let iterator = 2;
+  let result = [];
+
+  while (counter > 0) {
+    isPrime(iterator) && result.push(iterator) && counter--;
+    iterator++;
+  }
+  return result;
+}
+
+module.exports = { isPrime, nthPrime };
+
+const http = require('http');
+const url = require('url');
+const primes = require('./primes');
+
+// index.js
+http.createServer((req, res) => {
+  const { pathname, query } = url.parse(req.url, true);
+  if (pathname === '/primes') {
+    const result = primes.nthPrime(query.n || 0);
+    res.setHeader('Content-Type', 'application/json');
+    res.write(JSON.stringify(result));
+    res.end()
+  } else {
+    res.statusCode = 404;
+    res.write('Not Found');
+    res.end();
+  }
+}).listen(9898);
+// index.js 创建一个服务并在每次请求 /primes这个库，通过query传递参数，假设有3个客户端访问这个非阻塞API,第一个页面请求5个质数，第二个1000个，第三个100000000个，会发现，第三个请求时，客户端就会被阻塞，因为质数会占用大量的CPU,主线程忙于执行密集型的代码，将无法做其他事情，还有Node引入了工作线程
+```
+
+### 工作线程
+
+工作线程对于执行CPU密集型的javascript操作非常有用，在I/O密集型的工作中用途不大，NodeJs内置的异步I/O操作比工作线程效率更高
+
+修改代码：
+
+```javascript
+const { workerData, parentPort } = require('worker_threads');
+
+function isPrime(n) {
+  for (let i = 2, s = Math.sqrt(n); i <= s; i++)
+    if (n % i === 0) return false;
+  return n > 1;
+}
+
+function nthPrime(n) {
+  let counter = n;
+  let iterator = 2;
+  let result = [];
+
+  while (counter > 0) {
+    isPrime(iterator) && result.push(iterator) && counter--;
+    iterator++;
+  }
+  return result;
+}
+
+parentPort.postMessage(nthPrime(workerData.n))
+
+// index.js
+const http = require('http');
+const url = require('url');
+const { Worker } = require('worker_threads')
+
+
+http.createServer((req, res) => {
+  const { pathname, query } = url.parse(req.url, true);
+  if (pathname === '/primes') {
+    const worker = new Worker('./primes.js', {
+      workerData: {
+        n: query.n || 0
+      }
+    })
+
+    worker.on('error', () => {
+      res.statusCode = 500;
+      res.write('Oops there was an error');
+      res.end();
+    })
+
+    let result;
+
+    worker.on('message', (message) => {
+      result = message;
+    })
+
+    worker.on('exit', () => {
+      res.setHeader('Content-Type', 'application/json');
+      res.write(JSON.stringify(result));
+      res.end()
+    })
+  } else {
+    res.statusCode = 404;
+    res.write('Not Found');
+    res.end();
+  }
+}).listen(9898);
+// index.js在每个请求中创建一个Worker实例，在一个工作线程中加载并执行primes文件，当这个质数列表计算完成买这个message将会被触发，接受信息并赋值result，由于这个job已完成，将会再次触发exit事件，允许主线程发送数据到客户端
+// primes导入 workerData(从主线程传递参数)，parentPort是向主线程发送消息的方式
+// 主线程将不会再阻塞，但是生成工作线程并不是最佳实践，创建新线程并不便宜，一定要先创建一个线程池
+```
+
+## Redis
+
+Redis是一个免费开源、基于内存的高性能Key-Value数据库，具有速度快，数据持久化，多语言和多功能等特性。
+
+**速度快**：10w OPS能力，单线程模型，数据存于内存中，注意一次只能运行一次命令，使用过程拒绝使用慢命令，例如keys/flushall/flushdb/slow lua script/mutil/exec等
+
+**持久化**：基于内存模型，断电后或者服务重启会造成数据丢失，针对这个问题，提出两种数据持久化策略，分别为RDB和AOF,会将Redis在内存中的数据异步更新到磁盘中，实现数据的持久化功能。
+
+**丰富的数据类型**：除了常见的String/HashTable/List/Set/Zset之外还有BitMaps(位图)、HyperLogLog（超小内存唯一计数）
+
+**多语言**：基于TCP的通信方式，支持Node.Js/Python/Java/Ruby/Lua等。
+
+**多功能**：提供了发布订阅、简单的事务功能、pipeline提高客户端并发效率。另外在Redis中所有单个命令操作都是原子性的，如果想对多个命令一起操作，可以借助Lua脚本（实现自定义命令，保证原子性）
+
+### 通用命令
+
+- `keys *` ：遍历所有key，生产环境不建议使用，时间复杂度O(n)
+- `dbsize key`：计算key的总数，Redis内置了这个计数器，会实时更新key的总数，时间复杂度O(1)
+- `exists key`：检查key是否存在，时间复杂度为O(1)
+- `expire key seconds`：key在指定second后过期，时间复杂度O(1)
+- `ttl key`：key剩余的过期时间，时间复杂度O(1)
+- `persist key`: 去掉key的过期时间，时间复杂度O(1)
+- `type key`：查看key的类型，时间复杂度O(1)
