--- a/source/_posts/2020-06-19-NodeJS回顾.md
+++ b/source/_posts/2020-06-19-NodeJS回顾.md
@@ -2344,3 +2344,637 @@ Redis是一个免费开源、基于内存的高性能Key-Value数据库，具有
 - `ttl key`：key剩余的过期时间，时间复杂度O(1)
 - `persist key`: 去掉key的过期时间，时间复杂度O(1)
 - `type key`：查看key的类型，时间复杂度O(1)
+
+### 数据结构
+
+#### 字符串
+
+最大限制512MB,适用于缓存、计算器、分布式锁等，字符串类型的值可以为简单的字符串、JSON、XML、数组甚至是二进制（视频）
+
+##### 常见命令
+
+| 命令          | 含义                                 | 时间复杂度 |
+| ------------- | ------------------------------------ | ---------- |
+| set get del   | 对key进行设置、读取、删除            | O(1)       |
+| incr decr     | 计数                                 | O(1)       |
+| incrby decrby | 对计数设置增量                       | O(1)       |
+| setnx         | key存在不做任何操作                  | O(1)       |
+| setex         | key存在做操作与setnx相反             | O(1)       |
+| getset        | 设置新值返回旧值 getset key newValue | O(1)       |
+| mset mget     | 多个key进行设置、读取                | O(1)       |
+
+**set**
+
+```javascript
+set key value [ex seconds] [px milliseconds] [nx|xx]
+// seconds：单位(秒)
+// milliseconds:单位（毫秒）
+// nx:key 存在不做任何操作，等价于setnx
+// xx:key 存在做操作与nx相反，相当于setex
+```
+
+**mget mset**
+
+mget/mset可以批量获取或设置值，如果使用get多次读取数据等价于n次网络时间+n次命令时间，这种方法可以用mget优化，等价于1次网络时间+n次命令时间，这是一个O(n)操作，避免命令过多客户端阻塞
+
+```shell
+127.0.0.1:6379> mset key1 val1 key2 val2 key3 val3
+OK
+127.0.0.1:6379> mget key1 key2 key3
+1) "val1"
+2) "val2"
+3) "val3"
+```
+
+**incr decr incrby decrby **
+
+- incr：自增
+- decr：自减
+- incrby：指定数字自增
+- decrby：指定数字自减
+- incrbyfloat：指定浮点数自增
+
+```shell
+incr key
+decr key
+incrby key increment
+decrby key decrement
+incrbyfloat key increment
+```
+
+##### 应用场景
+
+缓存，对城市列表数据进行缓存
+
+```javascript
+// 伪代码
+function cityList(){
+    const redisKey = 'city';
+    let cities = redis.get(redisKey)
+    
+    if(!cities){
+        cities = mongo.getCityList();
+        redis.set(redisKey,JSON.stringify(cities));
+    }
+    return cities;
+}
+```
+
+分布式锁
+
+```shell
+set key value [EX seconds] [PX milliseconds] [NX|XX]
+```
+
+计数器，网站的PV/UV统计，文章点赞、阅读量，视频网络的播放量，Redis提供的incr命令可实现计数器功能，性能好复杂度为O(1)
+
+```javascript
+const incrPageViewsCounter = pageId =>{
+    const key = `page:views:${pageId}`;
+    return redis.incr(key);
+}
+```
+
+Session存储，Redis不会因为服务器重启导致Session数据丢失，具有数据持久化功能。
+
+限流，短信发送为了避免接口被频繁调用，通常要在指定时间内避免重复发送
+
+```javascript
+const SMSLimit = async phone =>{
+    const key = `sms:limit:${phone}`;
+    const result = await redis.set(key,1,'EX',60,'NX');
+    
+    if(result === null){
+        console.log('60s 内无法再次发送验证码')
+        return false
+    }
+    
+    console.log('可以发送')
+    return true;
+}
+
+SMSLimit(18800000000)
+```
+
+#### 哈希
+
+哈希结构有一个特点，所有命令都是H开头，hash类型其值本身就由一个或多个filed-value构成
+
+```javascript
+hashKey = {
+    filed1:value1,
+    filed2:value2
+}
+// 优：节省空间，可以部分更新
+// 缺：不支持TTL设置，Redis中过期时间只针对顶级Key,无法对Hash Key的field设置过期时间，只能对整个Key 通过expire设置
+// 注意：在使用hgetall的时候注意，集合很大将会浪费性能
+
+```
+
+##### 常见命令
+
+| 命令                 | 含义                                      | 时间复杂度 |
+| -------------------- | ----------------------------------------- | ---------- |
+| hset                 | 对key的field进行设置                      | O(1)       |
+| hget                 | 获取key指定的field                        | O(1)       |
+| hdel                 | 删除key指定的field                        | O(1)       |
+| hincrby hincrbyfloat | 类似于incrby incryfloat 这个操作的是field | O(1)       |
+| hmset hmget          | 对多个filed value 设置 读取               | O(n)       |
+| hgetall              | 获取key的所有field value                  | O(n)       |
+| hvals                | 获取key的所有value                        | O(n)       |
+| hkeys                | 获取key的所有fields                       | O(n)       |
+
+```shell
+127.0.0.1:6379> hset student name Jack
+(integer) 1
+127.0.0.1:6379> hget student name
+"Jack"
+127.0.0.1:6379> hmset student age 18 sex man
+OK
+127.0.0.1:6379> hmget student sex age
+1) "man"
+2) "18"
+127.0.0.1:6379> hgetall student
+1) "name"
+2) "Jack"
+3) "age"
+4) "18"
+5) "sex"
+6) "man"
+```
+
+##### 应用场景
+
+hash适合将一些数据存储在一起，例如缓存用户信息，与字符串不同的是，hash可以对用户信息结构中的每个字段单独存储，当需要获取信息时可以仅获取需要的部分字段。如果用字符串存储，两种方式，一种是将信息拆分为多个键（每个属性一个键）来存储，占用过的key同时占用空间；另外一种方式是序列化字符串存储，这种方式如果去数据只能全部取出并且还要进行反序列化，序列化/反序列化也有一定的内存开销
+
+```javascript
+// 缓存用户信息例子：
+// 模拟查询Mongo数据
+const mongo = {
+    getUserInfoByUserId:userId =>{
+        return{
+            name:'Jack',
+            age:19
+        }
+    }
+}
+
+// 获取用户信息
+async function getUserInfo(userId){
+    const key = `user:${userId}`;
+    try{
+        // 从缓存获取数据
+        const userInfoCache = await redis.hgetall(key);
+        
+        // 如果 userInfoCache为空，返回值为{}
+        if(Object.keys(userInfoCache).length ===0){
+            const userInfo = mongo.getUserInfoByUserId(userId);
+            await redis.hmset(key,userInfo);
+            await redis.expire(key,120);
+            return userinfo;
+        }
+        return userInfoCache;
+    }catch(err){
+        console.error(err);
+        throw err;
+    }
+}
+
+getUserInfo(1)
+```
+
+#### 列表
+
+Redis的列表用来存储字符串元素的集合，基于Linked Lists实现，意味着插入、删除操作非常快，时间复杂度为O(1),索引很慢，时间复杂度为O(n)
+
+Redis列表命令都是L开头，在实际运用中可以作为队列或者栈
+
+- Stack（栈）：后进先出，实现命令`lpush+lpop`
+- Queue（队列）：先进先出，实现命令`lpush+rpop`
+- Capped Collection(有限集合)：`lpush+ltrim`
+- Message Queue(消息队列)：`lpush+brpop`
+
+##### 常见命令
+
+| 命令        | 含义                                | 时间复杂度 |
+| ----------- | ----------------------------------- | ---------- |
+| lpush rpush | 列表左端/右端插入一个值             | O(1~n)     |
+| linsert     | 列表指定的值前/后插入新值           | O(n)       |
+| lpop rpop   | 列表左侧或者右侧弹出一个值          | O(1)       |
+| blpop brpop | lpop rpop 的阻塞版本，需设置timeout | O(1)       |
+| ltrim       | 按照索引范围修剪列表                | O(n)       |
+| lrange      | 获取指定范围内的元素列表            | O(n)       |
+| llen        | 获取列表长度                        | O(1)       |
+| lset        | 设置列表指定索引值为新值            | O(n)       |
+
+```shell
+# 列表左侧加入三个元素
+127.0.0.1:6379> lpush languages JavaScript Python Go
+(integer) 3
+
+# 获取列表长度
+127.0.0.1:6379> llen languages
+(integer) 3
+
+# 获取指定范围内元素列表 从左到右 start/end->0/N-1 从右到左 start/end->-1/-N
+127.0.0.1:6379> lrange languages 0 2
+1) "Go"
+2) "Python"
+3) "JavaScript"
+
+# 列表右侧插入元素
+127.0.0.1:6379> rpush languages TypeScript
+(integer) 4
+
+# 查看列表的元素
+127.0.0.1:6379> lrange languages 0 3
+1) "Go"
+2) "Python"
+3) "JavaScript"
+4) "TypeScript"
+
+# 列表左端移除一个元素
+127.0.0.1:6379> lpop languages
+"Go"
+
+# 列表右端移除一个元素
+127.0.0.1:6379> rpop languages
+"TypeScript"
+
+# 谁的那个列表指定索引值为新值
+127.0.0.1:6379> lset languages 1 JS
+OK
+
+# 列表指定的值前/后插入新值
+127.0.0.1:6379> linsert languages after JS Nodejs
+(integer) 3
+
+# 按照索引范围修剪列表（元素截取）
+127.0.0.1:6379> ltrim languages 1 2
+OK
+```
+
+##### 应用场景
+
+消息队列，Redis List结构的lpush与brpop命令可实现消息队列，lpush命令是从左端插入数据，brpop命令是从右端阻塞式的读取数据，阻塞读过程中如果队列中没有数据，会立即进入休眠直到数据到来或超过设置的timeout时间，会立即醒过来
+
+```javascript
+async function test(){
+    const key = 'languages';
+    // 阻塞读，timeout为5秒钟
+    const result = await redis.brpop(key,5);
+    console.log(result);
+}
+
+test();
+test();
+```
+
+#### 集合
+
+Redis集合类型可用来存储多个字符串元素，和列表不同，集合元素不允许重复，集合中的元素是无须的，也不能通过索引下标获取元素。Redis集合的命令都是S开头
+
+##### 常用命令
+
+| 命令        | 含义                                   | 时间复杂度 |
+| ----------- | -------------------------------------- | ---------- |
+| sadd        | 集合中添加元素，如果元素重复则添加失败 | O(1)       |
+| srem        | 删除集合中的元素                       | O(1)       |
+| scard       | 计算集合中的元素个数                   | O(1)       |
+| sismember   | 判断集合中是否存在指定元素             | O(count)   |
+| srandmember | 随机从集合中返回指定元素               | O(n)       |
+| sinter      | 求集合交集                             |            |
+| sunion      | 求集合并集                             |            |
+| sdiff       | 求集合差集                             |            |
+
+```shell
+# 集合中添加元素
+127.0.0.1:6379> sadd languages2 Nodejs JavaScript
+(integer) 2
+
+# 计算集合中元素个数
+127.0.0.1:6379> scard languages2
+(integer) 2
+
+# 判断集合中是否存在指定元素 1 存在 0不存在
+127.0.0.1:6379> sismember languages2 Nodejs
+(integer) 1
+
+127.0.0.1:6379> sismember languages2 Nodejs1
+(integer) 0
+
+# 随机从集合中返回n个元素
+127.0.0.1:6379> srandmember languages2 2
+1) "JavaScript"
+2) "Nodejs"
+
+127.0.0.1:6379> srandmember languages2 3
+1) "JavaScript"
+2) "Nodejs"
+
+# 设置用户1 使用的语言
+127.0.0.1:6379> sadd user:1 Nodejs JavaScript
+(integer) 2
+
+# 设置用户2 使用的语言
+127.0.0.1:6379> sadd user:2 Nodejs Python
+(integer) 2
+
+# 求 user:1与 user:2 交集
+127.0.0.1:6379> sinter user:1 user:2
+1) "Nodejs"
+
+# 求user:1 与 user:2 并集
+127.0.0.1:6379> sunion user:1 user:2
+1) "JavaScript"
+2) "Nodejs"
+3) "Python"
+
+# 求user:1 与 user:2 差集
+127.0.0.1:6379> sdiff user:1 user:2
+1) "JavaScript"
+```
+
+##### 应用场景
+
+抽奖，Redis的结合有去重功能，一些抽奖类项目中可以存储中奖的用户Id,能够保证同一个用户Id不会中奖两次
+
+```javascript
+async function test(userId){
+    const key = 'luck:users';
+    const result = await redis.sadd(key,userId);
+    
+    // 如果元素存在，返回0表示未添加成功
+    if(result === 0){
+        console.log('您已中间一次，无法再次参与');
+        return false
+    }
+    console.log('恭喜您中奖')
+    return true;
+}
+
+test(1);
+```
+
+计算用户共同感兴趣的商品，sadd与sinter可以用来统计用户共同感兴趣的商品，sadd保存每个用户喜欢的商品标签，使用sinter对每个用户感兴趣的商品标签求交集
+
+#### 有序集合
+
+Redis有序集合zset保留了集合set元素不能重复的特征之外，在有序集合的元素中是可以排序的，与列表使用索引下标不同的是有序集合是有序集合给每个元素设置一个分值（score）作为排序的依据
+
+Redis有序集合是Z开头的
+
+##### 常见命令
+
+| 命令    | 含义                   | 时间复杂度 |
+| ------- | ---------------------- | ---------- |
+| zadd    | 集合中添加元素         | O(logN)    |
+| zrem    | 集合中删除元素         | O(1)       |
+| zscore  | 返回集合的分数         | O(1)       |
+| zincrby | 增加或者减少集合的分数 | O(1)       |
+| zcard   | 返回元素的个数         | O(1)       |
+
+**zadd**
+
+```shell
+zadd key [NX|XX] [CH] [INCR] score member [sroce member ...]
+# [NX|XX]：NX member必须不存在才添加成功，用户Create;XX,member 必须存在才能更新成功，用于UPDATE
+# [CH]：返回此次操作后有序集合元素和分数发生的变化
+# [INCR]：对score做增加，相当于 zincrby
+# score：代表分数（排序）
+# member：成员
+```
+
+```shell
+# 有序集合 grages 中添加3个元素
+127.0.0.1:6379> zadd grades NX 80 xiaoming 75 xiaozhang 85 xiaoli
+(integer) 3
+
+# 查看成员 xiaozhang 分数
+127.0.0.1:6379> zscore grades xiaozhang
+"75"
+
+# 更新成员 xiaozhang 分数
+127.0.0.1:6379> zadd grades XX 90 xiaozhang
+(integer) 0
+
+# 再次查看成员xiaozhang分数
+127.0.0.1:6379> zscore grades xiaozhang
+"90"
+
+# 查看成员排名
+# 分数从低到高
+127.0.0.1:6379> zrank grades xiaozhang
+(integer) 2
+
+# 分数从高到低
+127.0.0.1:6379> zrevrank grades xiaozhang
+(integer) 0
+
+# 增加成员分数
+127.0.0.1:6379> zincrby grades 5 xiaozhang
+"95"
+
+# 返回指定范围成员排名，WITHSCORES可选参数，去掉则不返回分数
+127.0.0.1:6379> zrange grades 0 2 WITHSCORES
+1) "xiaoming"
+2) "80"
+3) "xiaoli"
+4) "85"
+5) "xiaozhang"
+6) "95"
+
+# 返回指定分数范围内的成员列表
+127.0.0.1:6379> zrangebyscore grades 85 100
+1) "xiaoli"
+2) "xiaozhang"
+
+# 删除指定成员
+127.0.0.1:6379> zrem grades xiaoli
+(integer) 1
+```
+
+### 高级特性
+
+#### 慢查询
+
+Redis整个生命周期：发送命令->排队->执行命令->返回结果，慢查询通常发生在执行命令阶段，可以通过日志查询系统slowlog进行问题定位跟踪
+
+在配置文件中`redis.conf`设置：
+
+- slowlog-max-len：表示慢查询最大的条数，默认128，保存在内存中，当超过预先设置的值后会将最早的slowlog删除，是个先进先出队列
+- slow-log-slower-than：慢查询阀值，默认10000微妙，只有命令执行时间大于该阀值才会被slowlog记录，如果记录所有命令将阀值设置为0
+
+Redis是每秒万级别，设置阀值时候，默认为10000微秒（10毫秒），不要设置太大，建议1毫秒之下，才有意义。定期将慢查询持久化到其他数据库，便于排查。
+
+慢查询命令：
+
+- slowlog get [n]：获取慢查询队列
+- slowlog len：获取慢查询队列长度
+- slowlog reset：清空慢查询队列
+
+#### pipeline
+
+核心1次网络请求处理n条命令，redis本身命令处理时间是微秒级别，pipeline主要减少网络传输要求
+
+#### 发布订阅
+
+角色：发布者（publisher）/订阅者（subscriber）/频道（channel）:
+
+- 发布消息`publish channel message`
+- 订阅消息 `subscribe [channel]`，可以订阅多个频道
+- 取消订阅 `unsubscribe [channel]`
+
+#### BitMaps（位图）
+
+#### CEO
+
+用于地理位置定位，基于zset实现的：
+
+- `geoadd key longitude latitude member`增加地理位置信息，例如：`geoadd cities: 163.31 39.99 beijing`
+- `geopos key member [member...]`,获取地理位置消息，例如`geopos cities: beijing`
+- `geodist key member1 member2 [unit]`：获取两地址位置距离，unit为单位（m/km/mi/ft）,例如：`geodist cities: beijing shanghai km`
+
+### 主从复制
+
+单机带来的问题机器故障、容量限制、QPS瓶颈，主从复制是一种一主多从的模式提供了数据副本，解决了单机带来的机器故障问题，另外主从分离模式还提供了Redis读的性能，也是高可用，分布式的基础。
+
+所谓的主从复制就是一个Redis主节点拥有多个从节点，由主节点的数据单向复制到从节点，在一些读多写少的业务场景非常受用
+
+### 数据持久化
+
+Redis数据存储都是内存里，对数据的更新异步的存储在磁盘里，在Redis中的数据持久化有两种策略，RDB快照，AOF日历
+
+#### RDB
+
+把当前内存中的数据集快照写入磁盘，恢复时将快照文件直接读到内存里。
+
+##### 触发机制
+
+save和bgsave生成快照
+
+save：使用save会造成客户端阻塞，它使用一种同步的方式生成RDB快照文件，因为Redis是单线程，如果save过程很长也会阻塞其他客户端的命令，在生产中是不建议使用的
+
+bgsave：使用bgsave Redis会fork一个子进程来负责生成RDB文件，由于bgsave是异步进行的并不会阻塞其他客户端的命令，bgsave模式下阻塞阶段发生在fork过程中
+
+##### 持久化配置
+
+其中stop-writes-on-bgsave-error这个配置很重要，如果子进程(也就是备用经常)在后台生成快照失败，主经常会停止新的写入操作，也是为了保持数据一致性
+
+```shell
+# 持久化默认时间策略
+save 900 1 # 如果仅有1-9次更改操作，那么要900s才写入硬盘一次
+save 300 10 # 如果仅有10-9999次更改操作，那么要300s才写入硬盘一次
+save 60 10000 # 如果超过10000次更改操作，那么60s才会写入硬盘一次
+
+# RBD 文件名称，建议 dump-6379.rdb
+dbfilename dump.rdb
+
+# 工作目录（上面 dump-6379.rdb 文件保存目录）
+dir /data/soft/redis-5.0.5/data/
+
+# 备份进程出错，主进程停止写入
+stop-writes-on-bgsave-error yes
+
+# 是否压缩
+rdbcompression yes
+
+# 导入时是否检查
+rdbchecksum yes
+```
+
+```shell
+127.0.0.1:6379> save
+OK
+127.0.0.1:6379> bgsave
+Background saving started
+
+# 服务端
+[35856] 02 Jul 10:01:02.999 * 1 changes in 3600 seconds. Saving...
+[35856] 02 Jul 10:01:03.063 * Background saving started by pid 58172
+[35856] 02 Jul 10:01:03.263 # fork operation complete
+[35856] 02 Jul 10:01:03.263 * Background saving terminated with success
+[35856] 02 Jul 10:30:56.240 * DB saved on disk
+[35856] 02 Jul 10:31:03.565 * Background saving started by pid 53904
+[35856] 02 Jul 10:31:03.705 # fork operation complete
+[35856] 02 Jul 10:31:03.705 * Background saving terminated with success
+```
+
+##### 不足
+
+性能、时间耗时，存在不稳定性
+
+RDB生成的过程就是将Redis内存中的dump到硬盘生成一个RDB文件，其实就是生成一个内存快照，save会造成阻塞，不建议生产环境去使用。besave的fork也是一个重量级操作，遵循copy-on-write（写入时复制）策略，新fork出的子进程会继续共享父进程的物理空间，使用COW技术可以避免不必要的资源分配，父进程的代码段和只读数据段都不允许修改，所以无需复制，当父进程处理些请求时会把要修改的页创建副本，而子进程在fork过冲中会共享父进程的内存快照
+
+> Copy on Write技术实现原理：fork之后，kernel把父进程中所有的内存页的权限都设为read-only,然后子进程的地址空间指向父进程。当父子进程都只读内存时，相安无事。当其中某个进程写入内存时，CPU硬件检测到内存页是read-only,于是触发页异常中间（page-fault），陷入kernel的一个终端例程。中断例程中，kernal就会把触发的异常的页复制一份，于是分子进程各自持有独立的一份
+>
+> COW技术可以减少分配和复制大量资源时带来的瞬间延迟，减少不必要的资源分配。
+>
+> 如果在fork之后，父子进程还需要进行读写操作，那么会产生大量的分页错误（页异常中断page-fault），这样就得不偿失了
+
+Redis会根据自定义时间策略或者定时任务手动执行besave进行快照备份，如果某个出现宕机会丢失部分数据
+
+#### AOF
+
+以写日志的方式执行redis命令后，将数据写入AOF日志文件
+
+##### 可靠性fsync
+
+redis命令写入过程，是先写入硬盘的缓冲区，缓冲区根据选择的策略写入到系统中，linux的glibc提供了fsync（init fd）函数可以将指定文件的内容强制从内核写入至磁盘，只要redis进程实时调用了fsync函数就可以保证AOF日志不丢失，由于fsync是一个磁盘I/O操作，所以不能每条redis指令都执行一次fsync，这样redis高性能就没有保证，有三种策略，默认推荐everysec策略：
+
+- always：每条命令都会写入AOF中，保证数据不会丢失，但是I/O开销会很大
+- everysec：以每秒钟为单位将缓冲区中的数据写入到硬盘，如果出现故障可能会丢失1秒钟的数据，这个也是Redis的默认值
+- no：这个策略根据操作系统定义的进行写入，不需要操作，但同时也是不可控的。
+
+##### 重写
+
+将那些过期、重复的命令进行压缩减少，从而达到减少硬盘占用量，提高数据恢复速度
+
+实现方式：
+
+- bgrewriteaof:类似于RDB中的bgsave
+- auto-aof-rewrite-min-size：配置AOF重写需要的最小尺寸
+- auto-aof-rewrite-percentage：配置AOF文件增长率
+
+配置
+
+```shell
+# 是否开启 aof
+appendonly yes
+
+# 文件名称
+appendfilename "appendonly-6379.aof"
+
+# 同步方式
+appendfsync everysec
+
+# aof 重写期间是否同步
+no-appendfsync-on-rewrite no
+
+# 重写触发配置
+auto-aof-rewrite-percentage 100
+auto-aof-rewrite-min-size 64mb
+
+# 加载 aof 时如果有错如何处理
+aof-load-truncated yes
+
+# 文件重写策略
+aof-rewrite-incremental-fsync yes
+```
+
+##### 数据损坏修复
+
+“在过去曾经发现一些很罕见的 BUG 导致使用 AOF 重建的数据跟原数据不一致的问题。” 这句话来自 Redis 实践官方，为了应对这种罕见的 BUG 可以使用 redis-check-aof 命令修复原始的 AOF 文件
+
+```shell
+redis-check-aof --fix appendonly-6379.aof # appendonly-6379.aof 对应你的 aof 日志文件
+```
+
+#### 选择
+
+- 重放优先级：系统重启时优先重放AOF备份数据，随后是RDB,因为从数据备份的完整性考虑，AOF相比RDB可靠性更高些
+- 恢复速度快：RDB采用二进制方式存储占用体积小，AOF是以日志形式存储，体积相比RDB要大，相比较来说，RDB的数据恢复速度要高于AOF
+- 数据安全性：RDB采用快照形式，在一定时间内会丢失数据，AOF相对更安全些，主要有三种策略。
+
+一般来说，应该同时使用两种持久化功能，如果可以承受数分钟以内的数据丢失，可以只使用RDB持久化。很多用户都只使用AOF持久化，而定时生成RDB非常便于进行数据库备份，并且RDB恢复数据集的速度也要比AOF恢复的速度要快，除此之外，使用RDB还可以避免之前说过的AOFbug。
+
