feat: add Redis other

--- a/source/_posts/2020-06-19-NodeJS回顾.md
+++ b/source/_posts/2020-06-19-NodeJS回顾.md
@@ -2978,3 +2978,312 @@ redis-check-aof --fix appendonly-6379.aof # appendonly-6379.aof 对应你的 aof
 
 一般来说，应该同时使用两种持久化功能，如果可以承受数分钟以内的数据丢失，可以只使用RDB持久化。很多用户都只使用AOF持久化，而定时生成RDB非常便于进行数据库备份，并且RDB恢复数据集的速度也要比AOF恢复的速度要快，除此之外，使用RDB还可以避免之前说过的AOFbug。
 
+### 哨兵高可用
+
+主从复制如果主节点发生故障，Redis Sentinel功能可以自动提升而不是人工干预
+
+Sentinel是一个分布式系统，类似于Cousul集群，一般由3~5个节点组成，使用Raft算法实现领导者选举因为故障转移只需要一个Sentinel节点来完成
+
+### 为什么Redis只适用于缓存而不能当做数据库来使用？
+
+- 性能：Redis是一个基于内存的数据库，通常用来计数器、Session存储、缓存设计等等
+- 成本：假设百万条数据，仅1%是热点数据其余都是冷数据，这种情况全部都存在Redis里面，是资源的浪费，从缓存设计角度来说，所保存的也仅是热点数据
+- 灵活性：Redis的数据结构是丰富的，支持String,HashTable,List,Set,Zset还有最新的BitMaps.GEO等，如果有很复杂的查询语句，关联查询等，还是SQL等数据库更加合适
+- 数据可靠性：第一种方式是Redis+RDB，如果发生断电，自上次持久化到最次一次故障之间的数据丢失。第二种是Redis+AOF，AOF有三种策略将数据持久化到磁盘，其中everysec是相对折中的一种方案，everysec折中方案也会存在1秒钟数据丢失的问题。
+
+### 实践1——计数器实现并发场景下的优惠券领取功能
+
+计数器在实际中有很多需求：PV/UV、接口并发限制、抽奖、优惠券领取等
+
+#### 业务背景
+
+业务需求方做优惠券发放活动，共优惠券10张，参与用户100人，先到先得，假设每次并发20用户同时访问，如何保证不超领取
+
+#### 相关命令
+
+- exists：判断指定key是否存在
+- setnx：设置值，若值存在不做任何处理
+- incr：计数
+
+每发送一次领取请求，采用incr命令进行自增，由于redis单线程的原因，可以保证原子性，不会出现超领
+
+```javascript
+// luck.js
+const Redis = require('redis');
+const redis = new Redis(6379,'127.0.0.1');
+
+// 将日志写入指定文件
+const fs = require('fs');
+const {Console} = require('console');
+const output = fs.createWriteStream('./stdout.js')
+const errorOutput  fs.createWriteStream('./stderr.js')
+const logger = new Console(output,errorOutput);
+
+async function luck(){
+    const count = 10;
+    const key = 'counter:luck';
+    const keyExists = await redis.exists(key);
+    
+    if(!keyExists){
+        // 如果key不存在初始化设置
+        await redis.setnx(key,0);
+    }
+    
+    // 增加领取数量
+    const result =  await redis.incr(key);
+    
+    if(result > count){
+        // 优惠券领取超限
+        logger.error('luck failure',result);
+        return;
+    }
+    
+    logger.info('luck success',result);
+}
+module.export = luck;
+
+// app.js
+const http = require('http');
+const luck = require('./luck');
+
+http.createServer((req,res)=>{
+    if(req.url === 'luck'){
+        luck();
+        
+        res.end('ok')
+    }
+}).listen(3000)
+```
+
+### 实践2——Redis Lua脚本
+
+Lua是一种轻量小巧的脚本语言，用标准c语言编写并以源代码形式开放，设计目的是为嵌入应用程序中，从而为应用程序提供灵活的扩张和定制功能。由于Lua语言具有原子性，其在执行过程中不会被其他程序打断，对于并发下的数据一致性有一定的帮助
+
+#### 两种Lua脚本
+
+Redis支持两种运行Lua脚本，一种是直接Redis中输入Lua代码，适用于一些简单的脚本，另一种方式是编写Lua脚本文件，Redis使用SHA1算法支持对脚本签名和Script Load 预先缓存，需要运行的时候通过签名返回的标识符即可。
+
+#### EVAL
+
+通过内置的Lua解释器，可以使用EVAL命令对Lua脚本进行求值
+
+- script：指定脚本
+- numkeys：指定键名餐参数个数
+- key：键名，可以多个key,通过KEYS[1]KEYS[2]的形式访问
+- atg：键值，可以多个val，通ARGS[1]ARGS[2]的形式访问
+
+```shell
+EVAL script numkeys key[key...] arg[arg...]
+# 通过KEYS[] 数组的形式访问ARGV[],下标是从1开始，KEYS[1]对应的键名为name1,ARGV[2]对应的值为val2
+127.0.0.1:6379> EVAL "return redis.call('SET',KEYS[1],ARGV[2])" 2 name1 name2 va
+l1 val2
+OK
+127.0.0.1:6379> get name1
+"val2"
+```
+
+redis.call何redis.pcall是两个不同的Lua函数来调用redis命令，区别是如果redis命令中出现错误异常，redis.call会直接返回一个错误信息给调用者，而redis.pcall会以Lua的形式对错误进行捕获并返回
+
+```shell
+# 这里执行了两条 Redis 命令，第一条故意写了一个 SET_ 这是一个错误的命令，可以看到出错后，错误信息被抛出给了调用者，同时你执行 get name2 会得到 (nil)，第二条命令也没有被执行
+# redis.call
+127.0.0.1:6379> EVAL "redis.call('SET_', KEYS[1], ARGV[2]); redis.call('SET', KEYS[2], ARGV[3])" 2 name1 name2 val1 val2 val3
+(error) ERR Error running script (call to f_bf814e38e3d98242ae0c62791fa299f04e757a7d): @user_script:1: @user_script: 1: Unknown Redis command called from Lua script 
+
+# redis.pcall
+# 一样的操作，可以看到输出结果为nil，它的错误被Lua捕获了，在执行get name2 会得到一个设置好的结果val3，这里第二条命令是被执行了的
+EVAL "redis.pcall('SET_', KEYS[1], ARGV[2]); redis.pcall('SET', KEYS[2], ARGV[3])" 2 name1 name2 val1 val2 val3
+(nil)
+```
+
+##### Nodejs实现
+
+```java
+// ioredis 支持所有脚本命令，比如EVAL/EVALSHA/SCRIPT,在现实场景中使用它是很繁琐的，要注意脚本缓存，并检测何时使用EVAL、EVALSHA.ioredis公开了一个defineCommand方法，使得脚本更容易使用
+const Redis = require('ioredis');
+const redis = new Redis(6379,'127.0.0.1');
+
+const evalScript = "return redis.call('SET',KEYS[1],ARGV[2])";
+redis.defineCommand('evalTest',{
+    numberOfKeys:2,
+    lua:evalScript
+});
+
+async function eval(){
+    await redis.evalTest('name1','name2','val1','val2');
+    const result = await redis.get('name1');
+    console.log(result) // val2
+}
+
+eval();
+    
+
+```
+
+#### EVALSHA
+
+EVAL命令要求每次执行脚本的时候都发送一次脚本主体script body。Redis有一个内部缓存机制，因此它不会每次都重新编译脚本，通过EVALSHA来实现，根据给定的SHA1校验码，对缓存在服务器中的脚本进行求值
+
+- SCRIPT FLUSH：清除所有脚本缓存
+- SCRIPT EXISTS：检查指定的脚本是否存在于脚本缓存
+- SCRIPT LOAD：讲一个脚本转入脚本缓存，但不立即运行它
+- SCRIPT KILL：杀死当前正在运行的脚本
+
+```shell
+EVALSHA sha1 numkeys key [key...] arg[arg...]
+
+# 载入脚本缓存
+127.0.0.1:6379> SCRIPT LOAD "redis.pcall('SET',KEYS[1],ARGV[2])"
+"3b2c59b4e98a20a3a9e631fb586218e7b70f1020"
+
+# 生成的SHA-1签名的标识字符串用于执行之后的脚本
+127.0.0.1:6379> EVALSHA 3b2c59b4e98a20a3a9e631fb586218e7b70f1020 2 name11 name12
+ val11 val12
+(nil)
+
+127.0.0.1:6379> get name11
+"val12"
+```
+
+##### nodejs实现
+
+```javascript
+const Redis = require('ioredis');
+const redis = new Redis(6379,'127.0.0.1');
+
+const evalScript = "return redis.call('SET'，KEY1[1],ARGV[2])";
+
+async function evalSHA(){
+    // 1.缓存脚本获取sha1值
+    const sha1 = await redis.script('load',evalScript);
+    // 2.通过evalsha执行脚本
+    await redis.evalsha(sha1,2,'name1','name2','val1','val2');
+    
+    // 3.获取数据
+    const result = await redis.get('name1');
+    console.log(result); // val2
+}
+
+evalSHA();
+```
+
+#### Lua脚本文件
+
+有逻辑运算的脚本，可以编写Lua脚本文件
+
+下面是一个测试代码，通过读取两个值比较返回不同的值，通过lua脚本实现后可以多条redis命令原子性
+
+```lua
+---test.lua
+-- 先SET
+redis.call('SET',KEYS[1],ARGV[1])
+redis.call('SET',KEYS[2],ARGV[2])
+
+-- GET 取值
+local key1 = tonumber(redis.call('GET',KEYS[1]));
+local key2 = tonumber(redis.call('GET',KEYS[2]));
+
+-- 如果key1 小于 key2返回0 nil相当于false
+if(key1 == nil or key == nil or key1 < key2)
+    then return 0
+    else return 1
+    end
+```
+
+##### nodejs加载lua脚本文件
+
+```javascript
+const Redis = require('ioredis');
+const redis = new Redis(6379,'127.0.0.1')
+const fs = require('fs')
+
+async function test(){
+    const redisLuaScript = fs.readFileSync('./test.lua');
+    const result1 = await redis.eval(redisLuaScript,2,'name1','nam2',20,10);
+    const result2 = await redis.eval(redisLuaScript,2,'name1','nam2',10,20);
+    console.log(result1,result2); // 1 0
+}
+
+test();
+```
+
+### 实践3——Redis分布式锁
+
+线程锁：单线程编程模式下请求是顺序的，一个好处不需要考虑线程安全、资源竞争问题
+
+进程锁：一个服务部署于一台服务器，同时开启多个进程，nodejs中为了利用操作系统资源，根据CPU的核心数可以开启多程模式，这个时候如果对于一个共享资源操作还是会遇到资源竞争的问题，另外每一个进程都是相互独立，拥有自己独立的内存空间，关于进程锁通过java的synchronized也很难解决，它仅局限在同一个JVM中有效
+
+分布式锁：一个服务无论是单线程还是多进程模式，当多机部署、处于分布式环境下对统一共享资源进行操作还是会面临同样的问题。由于先读数据在通过业务逻辑修改之后进行SET操作，这并不是一个原子操作，当多个客户端对同一个资源进行先读后写操作就会引发并发问题，这个时候就需要分布式锁去解决。
+
+#### 实现思路
+
+实现分布式锁的方式：数据库、redis、zookeeper，通过redis来实现一个分布式锁，保持三个特性：安全性、死锁、容错
+
+安全性：上锁，在任意时刻保持仅有一个客户端持有该锁
+
+
+
+
+
+## 如何让秒杀、活动倒计时更加精确
+
+分析一下从获取服务器时间到前端显示倒计时的过程：
+
+1. 客户端http请求服务器时间
+2. 服务器响应完成
+3. 服务器通过网络传输时间到客户端
+4. 客户端根据活动开始时间和服务器时间差做倒计时显示
+
+服务器响应完成的时间就是服务器时间，但是经过网络传输就会有误差，由网络环境决定误差大小，一般是几十ms或者几百ms。
+
+可得出：`当前服务器时间=服务器系统返回时间+网络传输时间+前端渲染时间+常量（可选）`
+
+前端渲染时间，避免不同浏览器渲染快慢差异差异造成明显的时间不同步，可以在服务器返回当前时间和本地签单的时间的差值得出
+
+获得服务器时间后，前端进入倒计时计算和计时器显示，要考虑js代码和线程阻塞造成计时器延时问题，思路是通过引入计数器，判断计时器延迟执行的时间来调整，尽量让误差缩小，不同浏览器不同时间段打开页面倒计时误差可控制在1s以内
+
+```javascript
+// 线程占用
+setInterval(()=>{
+    var j = 0;
+    while(j++ < 100000000);
+},0)
+
+// 倒计时
+let interval = 1000,
+    ms = 50000, //从服务器和活动开始时间计算出的时间差，测试用50000ms
+    count=0,
+    startTime = new Date().getTime(),
+    timeCounter = null;
+if(ms >=0){
+    timeCounter = setTimeout(countDownStart,interval)
+}
+function countDownStart(){
+    count++;
+    const offset = new Date().getTime() - (startTime+count*interval);
+    let nextTime = interval -offset;
+    const daytohour = 0;
+    if(nextTime < 0){
+        nextTime = 0;
+    }
+    ms-=interval;
+    console.log(`误差：${offset}ms,下一次执行：${nextTime}ms后，离活动结束还有：${ms}ms`)
+    
+    if(ms < 0){
+        clearTimer(timeCount)
+    }else{
+        timeCounter = setTimeout(countDownStart,nextTime),
+    }
+}
+    
+```
+
+```
+Foo.getName(); // 
+getName(); // 
+Foo().getName(); // 
+getName(); // 
+new Foo.getName(); // 
+new Foo().getName(); // 
+new new Foo().getName(); //
+```
