feat: add Redis end

--- a/source/_posts/2020-06-19-NodeJS回顾.md
+++ b/source/_posts/2020-06-19-NodeJS回顾.md
@@ -3221,7 +3221,222 @@ test();
 
 安全性：上锁，在任意时刻保持仅有一个客户端持有该锁
 
+死锁：造成死锁可能是由于某种原因，本该释放的锁没有被释放，因此在上锁的时候可以同步设置过期时间，由于客户端自己的原因没有被释放，也要保证锁能够自动释放
 
+容错：容错是在多节点的模式下需要考虑的，只要保证N/2+1节点可用，客户端就可以成功获取、释放锁
+
+#### Redis但实力分布式锁实现
+
+在Redis的单节点实例下实现一个简单的分布式锁，会借助简单lua脚本来实现原子性
+
+##### 上锁
+
+通过setnx命令占坑，为了防止死锁，通常在占坑之后还会设置一个过期时间expire:
+
+```shell
+setnx key value
+expire key seconds
+```
+
+上面的操作不是一个原子性操作，原子性操作是指命令在执行过程中并不会被其他线程或者请求打断，如果setnx执行成功之后，出现网络闪断expire命令便不会得到执行，会导致死锁出现。
+
+通过：
+
+```shell
+set key value [EX seconds] [PX milliseconds] [NX|XX]
+```
+
+##### 释放锁
+
+释放锁的过程是将原来占有的坑删除，加锁的过程把value设置为一个随机值，在del key之前先判断这个key存在且value等于自己制定的值才执行删除操作，判断和删除不是一个原子性操作，借助Lua脚本实现
+
+```lua
+if redis.call("get",KEYS[1]) == ARGV[1] then
+    return redis.call("del",KEYS[1])
+else 
+    return 0
+end
+```
+
+#### Node实践
+
+##### 初始化自定义redisLock
+
+```javascript
+class RedisLock {
+  /**
+   * 初始化 RedisLock
+   * @param {*} client
+   * @param {*} option
+   */
+
+  constructor(client, options = {}) {
+    if (!client) {
+      throw new Error('client 不存在')
+    }
+
+    if (client.status !== 'connecting') {
+      throw new Error('client 未正常链接')
+    }
+
+    this.lockLeaseTime = options.lockLeaseTime || 2; // 默认所过期时间 2 秒
+    this.lockTimeout = options.lockTimeout || 5; // 默认所过期时间 5 秒
+    this.expireMode = options.expireMode || 'EX';
+    this.setMode = options.setMode || 'NX';
+    this.client = client;
+  }
+
+  /**
+   * 上锁，通过set 命令传入setnx/expire拓展参数，
+   * 上锁成功返回，上锁失败进行重试，
+   * 在lockTimeout 指定时间内仍未获取到锁，则获取锁失败
+   * @param {*} key
+   * @param {*} val
+   * @param {*} expire
+  */
+  async lock(key, val, expire) {
+    const start = Date.now();
+    const self = this;
+
+    return (async function intraneLock() {
+      try {
+        const result = await self.client.set(key, val, self.expireMode, expire || self.lockLeaseTime, self.setMode);
+
+        // 上锁成功
+        if (result === 'OK') {
+          console.log(`${key} ${val} 上锁成功`);
+          return true;
+        }
+
+        // 锁超时
+        if (Math.floor((Date.now() - start) / 1000) > self.lockLeaseTime) {
+          console.log(`${key} ${val} 上锁重试超时结束`)
+          return false;
+        }
+
+        // 循环等待重试
+        console.log(`${key} ${val} 等待重试`)
+        await sleep(3000);
+        console.log(`${key} ${val} 开始重试`)
+        return intraneLock();
+      } catch (err) {
+        throw new Error(err);
+      }
+    })();
+  }
+
+  /**
+   * 释放锁,通过redis.eval(script)执行自定义redis lua脚本
+   * @param {*} key
+   * @param {*} val
+  */
+  async unLock(key, val) {
+    const self = this;
+    const script = `
+   if redis.call('get',KEYS[1] == ARGV[1]) then 
+    return redis.call('del',KEYS[1])
+   else 
+    return 0
+   end
+   `;
+    try {
+      const result = await self.client.eval(script, 1, key, val);
+      if (result === 1) {
+        return true;
+      }
+      return false;
+    } catch (err) {
+      throw new Error(err);
+    }
+  }
+}
+```
+
+##### 测试
+
+```javascript
+const Redis = require('ioredis');
+const redis = new Redis(6379, '127.0.0.1');
+const uuidv1 = require('uuid/v1');
+const RedisLock = require('./redisLock');
+
+const redisLock = new RedisLock(redis);
+
+function sleep(time) {
+  return new Promise((resolve) => {
+    setTimeout(function () {
+      resolve();
+    }, time || 1000)
+  })
+}
+
+async function test(key) {
+  try {
+    const id = uuidv1();
+    await redisLock.lock(key, id, 20);
+    await sleep(3000);
+
+    const unLock = await redisLock.unLock(key, id);
+    console.log('unLock: ', key, id, unlock);
+  } catch (err) {
+    console.log('上锁失败', err);
+  }
+}
+
+test('name1');
+test('name1')
+```
+
+同时调用了两次test方法进行上锁，只有第一次是成功的，第二次name1 上锁的时候发现key=name1已被占坑，开始重试，由于以上的测试中设置了3秒之后自动释放，name1 在经过两次重试之后上锁成功
+
+```shell
+name1 26e00260-0532-11ea-b978-2160dffafa30 上锁成功
+name1 26e02970-0532-11ea-b978-2160dffafa30 等待重试
+name1 26e02970-0532-11ea-b978-2160dffafa30 开始重试
+name1 26e02970-0532-11ea-b978-2160dffafa30 等待重试
+unLock:  name1 26e00260-0532-11ea-b978-2160dffafa30 true
+name1 26e02970-0532-11ea-b978-2160dffafa30 开始重试
+name1 26e02970-0532-11ea-b978-2160dffafa30 上锁成功
+unLock:  name1 26e02970-0532-11ea-b978-2160dffafa30 true
+```
+
+##### Redlock算法
+
+在Sentinel/Redis Cluster下，如果客户端A在主节点获取到锁之后，主节点还未来得及同步信息到从节点就挂掉了，这时候Sentinel 会选举另外一个从节点作为主节点，那么客户端B此时也申请相同的锁，就会出现同一个锁被多个客户端持有，对数据的最终一致性有很高的要求还不行。
+
+鉴于这些问题，官方提供了一个使用Redis实现分布式锁的规范算法Redlock，在单实例或者多实例提供强有力的保障，本身具备容错能力，会从N个实例使用相同的key、随机值尝试`set ket value [EX seconds] [PX milliseconds] [NX|XX]`命令去获取所，在有效时间内至少 `N/2+1`个Redis实例取到所，否则取锁失败，失败情况下客户端应该在所有Redis实例上进行解锁
+
+```javascript
+const Redis = require('ioredis');
+const client1 = new Redis(6379, '127.0.0.1');
+const RedLock = require('redlock');
+
+const redlock = new RedLock([client1], {
+  retryDelay: 200, // time in ms
+  retryCount: 5
+})
+
+// 多个Redis 实例
+// const redlock = new RedLock(
+//   [new Redis(6379, '127.0.0.1')],
+//   [new Redis(6379, '127.0.0.2')],
+//   [new Redis(6379, '127.0.0.3')]
+// )
+
+async function test(key, ttl, client) {
+  try {
+    const loclk = await redlock.lock(key, ttl);
+    console.log(client, lock, value)
+  } catch (err) {
+    console.log(client, err);
+  }
+}
+
+test('name1', 10000, 'client1');
+test('name1', 10000, 'client2');
+```
+
+对同一个key name1 两次上锁，由于client1 先取到了锁，client2 无法获取锁，重试5次之后报错：`LockError:Exceeded 5 attempts to lock the resource 'name1'`
 
 
 
