--- a/source/_posts/2020-07-07-docker.md
+++ b/source/_posts/2020-07-07-docker.md
@@ -278,3 +278,216 @@ docker run --name web2 -d -p 81:80 nginx:v2
 
 ### Dockerfile定制镜像
 
+dockerfile是一个文本文件，其内包含了一天天的指令（Instruction）,每一条指令构建一层，因此每一条指令的内容就是描述该层应当如何构建
+
+在一个空白目录，建立一个文件夹，并命名为Dockerfile
+
+```bash
+mkdir myngix
+cd mynginx 
+touch Dockerfile
+vi Dockerfile
+# 内容为
+FROM nginx
+Run echo '<h1>Hello,Docker!</h1>' > /usr/share/nginx/html/index.html
+```
+
+#### FROM指定基础镜像
+
+定制镜像是以一个镜像为基础，在其上进行定制，FROM就是指定基础镜像，因此FROM是Dockerfile文件的第一条指令，除了docker hub现有的镜像，还有一个特殊的镜像 `scratch`，虚拟镜像，表示一个空白的镜像
+
+> FROM scratch
+
+以它为基础的话，意味着不以任何镜像为基础，接下来写的指令作为镜像的第一层开始存在。不以任何系统为基础，直接将可执行文件复制进镜像的做法不罕见，对于Linux下静态编译的程序来说，并不需要有操作系统提供运行时支持，所需的一切库都已经在可执行文件里了，因此直接FROM scratch会让镜像体积更加小巧。使用GO语言开发的引用会使用这种方式，这也是为什么说Go是特别适合容器微服务架构的语言的原因之一
+
+#### RUN指定命令
+
+RUN指令是定制镜像最常见的指令之一。格式有两种：
+
+shell格式：`RUN<命令>`，就像直接在命令行输入的命令一样
+
+exec格式：`RUN["可执行命令","参数1","参数2"]`，这更像是函数调用中格式
+
+
+
+```shell
+FROM debian:jessie
+
+RUN apt-get update
+RUN apt-get install -y gcc libc6-dev make
+RUN wget -O redis.tar.gz "http://download.redios.io/release/redis-3.2.5.tar.gz"
+RUN mkdir -p /usr/src/redis
+RUN tar -xzf redis.tar.gz -C /usr/src/redis --script-components=1
+RUN make -C /usr/src/redis
+RUN make -C /usr/src/redis install
+```
+
+dockerfile中每个指令都会建立一层，RUN也不例外，每一个RUN的行为都会新建一层，在其上执行结果后，commit一层的修改，构成新的镜像，上面这种写法创建了7个镜像，这是完全没有意义的，运行时很多不需要的东西都被装进了镜像，比如编译、更新的软件包等，结果就是产生臃肿、非常多层的镜像，不仅增加了构建时间，也容易出错。UnionFS是有最大层数限制的，比如AUFS,曾经是最大不超过42层，现在是不超过127层。
+
+上面的Dockerfile正确写法应该是：
+
+```shell
+FROM debian:jessie
+
+RUN buildDeps='gcc libc6-dev make' \
+	&& apt-get update \
+	&& apt-get install -y $buildDeps \
+	&& wget -O redis.tar.gz "http://download.redios.io/release/redis-3.2.5.tar.gz" \
+	&& mkdir -p /usr/src/redis \ 
+	&& tar -xzf redis.tar.gz -C /usr/src/redis --script-components=1 \
+	&& make -C /usr/src/redis \
+	&& make -C /usr/src/redis install \
+	&& rm -rf /var/lib/apt/lists/* \
+	&& rm redis.tar.gz \
+	&& rm -r /usr/src/redis \
+	&& apt-get purge -y --auto-remove $buildDeps
+```
+
+之前所有命令的目的只有一个，就是编译、安装redis可执行文件。因此没有必要建立多层，这里仅使用一个RUN，并使用 `&&`将各个需要命令串联起来，将之前的7层变成1层。并且为了格式化还进行了换行。Dockerfile支持Shell类的行尾添加 `\`的命令行，以及行首 `#`进行注释的格式。良好的格式会让排障更加容易。
+
+此外，上面的命令还进行了清理工作，删除了为了编译构建所需要的软件，清理了所有下载、展开的文件，并且还清理了apt缓存文件，在镜像构建过程要确保每一层只添加真正需要添加的东西，任何无关的东西都应该被清理掉。
+
+#### 构建镜像
+
+在Dockerfile文件所在目录执行：
+
+```shell
+docker@default:~/mynginx$ docker build -t nginx:v3 .
+Sending build context to Docker daemon  2.048kB
+Step 1/2 : FROM nginx
+ ---> 2622e6cca7eb
+Step 2/2 : RUN echo '<h1>Hello,Docker!!!</h1>' > /usr/share/nginx/html/index.html
+ ---> Running in 6b7204234c09
+Removing intermediate container 6b7204234c09
+ ---> 4021436fa2ed
+Successfully built 4021436fa2ed
+Successfully tagged nginx:v3
+# 在Step2中，RUN启动了一个容器6b7204234c09，执行了要求的命令，并提交了这一层4021436fa2ed，删除所用到的容器RUN启动了一个容器6b7204234c09
+```
+
+`docker build`格式：
+
+> docker build [选型] <上下文路径/URL/->
+
+#### 镜像构建上下文（Context）
+
+docker build 命令最后一个 `.`，代表当前目录，而Dockerfile就在当前目录，所以会误以为这个路径是指定Dockerfile所在路径，这样的理解不准确，其实这是在指定上下文路径。
+
+docker build的工作原理：Docker在运行时分为Docker引擎（也就是服务端守护进程）和客户端工具。Docker的引擎提供了一组REST API,被称为Docker Remote API，而docker命令这样的客户端工具，则是通过这组API与Dokcer引擎交互，从而完成各种功能。因此我们表面上好像在本机执行各种docker功能，实际上，一切都是使用的远程调用形式在服务端（Docker引擎）完成。也因为这种C/S设计，让我们操作远程服务器的Docker引擎变得轻而易举。
+
+当我们进行镜像构建时，并非所有的定制都会通过RUN指令完成，经常会需要将一些本地文件复制进镜像，比如通过COPY指令，ADD指令。而docker build命令构建镜像，并非在本地构建，而是在服务端，也就是Docker引擎中构建。那么在这种客户端/服务端的架构中，如何才能让服务端获得本地文件呢？
+
+这就引入了上下文概念，当构建的时候，用户会指定构建镜像上下文路径，docker build命令得知这个路径后，会将路径下的所有内容打包，然后上传给Docker引擎，这样Docker引擎收到这个上下文之后，展开就会获得构建镜像所需要的一切文件。
+
+例如在Dockerfile这样写：
+
+> COPY ./package.json /app/
+
+这并不是要复制执行docker build命令所在的目录下的package.json，也不是复制Dockerfile所在目录下的package.json,而是复制上下文context目录下的package.json
+
+因此，COPY这类指令中的源文件的路径都是相对路径，如果真的需要那些文件，应该将它们复制到上下文目录中去。观察docker build输出，可以看到这个发送上下文的过程：
+
+```shell
+docker@default:~/mynginx$ docker build -t nginx:v3 .
+Sending build context to Docker daemon  2.048kB
+```
+
+理解构建上下文对于镜像构建很重要，避免犯一些不应该的错误，比如初学者在发现 `Copy/opt/xxxx /app`不工作后，干脆把Dockerfile放到了硬盘跟目录去构建，结果发现docker build执行后，在发送一个几十GB的东西，极为缓慢而且容易构建失败，那是因为这种做法是让docker build打包整个硬盘，这显然是使用错误。
+
+一般来说，应该会将Docker置于一个空目录，或者根目录下面，如果该目录下没有所需文件，那么应该把所需文件复制一份过来。如果目录下有些东西确实不希望构建时传给Docker引擎，那么可以用`.dockerignore`剔除不需要作为上下文传递给Docker引擎的。
+
+在默认情况下，如果不额外指定Dockerfile的话，会将上下文目录下的名为Dockerfile的文件作为Dockerfile，实际上不要求名字必须为Dockerfile，并且不要求必须位于上下文目录中，比如用 `-f ../Dockerfile.php`参数指定某个文件作为 Dockerfile
+
+#### 其他Docker build用法
+
+##### 直接用 git repo进行构建
+
+docker build还支持从URL构建，比如从 Git repo
+
+```shell
+# 指定构建所需要的git repo，并且指定默认的master分支，构建目录为/814/，然后docker就会自己去git clone这个项目、切换到指定分支，并进入到指定目录后开始构建
+docker build https://github.com/twang2218/gitlab-ce-zh.git#:8.14
+docker build https://github.com/twang2218/gitlab-ce-zh.git\#:8.14
+Sending build context to Docker daemon 2.048 kB
+Step 1 : FROM gitlab/gitlab-ce:8.14.0-ce.0
+8.14.0-ce.0: Pulling from gitlab/gitlab-ce
+aed15891ba52: Already exists
+773ae8583d14: Already exists
+...
+```
+
+##### 用tar压缩包构建
+
+```shell
+docker build http://server/context.tar.gz
+```
+
+如果给出的URL不是Git repo，而是个tar压缩包，那么Docker引擎会下载这个包，并自动解压，以其作为上下文，并且构建。
+
+##### 从标准输入中读取Dockerfile进行构建
+
+> docker build - < Dockerfile
+
+或者
+
+> cat Dockerfile | docker build -
+
+如果标准输入传入的是文本文件，则将其视为Dockerfile，并开始构建。这种形式由于直接从标准输入中读取Dockerfile的内容，没有上下文，因此不可以像其他方法那样可以将本地文件COPY进镜像之类的事情
+
+##### 从标准输入中读取上下文压缩包镜像构建
+
+> docker build - < context.tar.gz
+
+如果发现标准输入的文件格式是 gzip/bzip2/xz的话，将会使其成为上下文压缩包，直接将其展开，将里面视为上下文，并开始构建。
+
+#### 指令详解
+
+##### COPY复制文件
+
+格式：
+
+- `COPY <源路径>...<目标路径>`
+- `COPY["<源路径1>",..."<目标路径>"]`
+
+和RUN指令一样，也有两种格式，一种类似于命令行，一种类似于函数调用
+
+COPY指令将从构建上下文目录中`<源路径>`的文件/目录复制到新的一层的镜像内的`<目标路径>`位置，比如：
+
+```shell
+COPY package.json /usr/src/app/
+```
+
+源路径可以是多个，甚至是通配符，其通配符规则要满足GO的filepath.Match规则，如：
+
+```shell
+COPY hom* /mydir/
+COPY hom?.txt /mydir/
+```
+
+`<目标路径>`可以是容器内的绝对路径，也可以是相对于工作目录的相对路径（工作路径可以用WORKDIR指令来指定）。目标路径不需要事先创建，如果目录不存在会在复制文件前先行创建缺失目录。
+
+此外，还有一点使用COPY指令，源文件的各种元数据都会保留。比如读、写、执行权限、文件变更时间等。这个特性对于镜像定制很有用，特别是构建相关文件都在使用Git进行管理时。
+
+##### ADD更高级的复制文件
+
+ADD指令和COPY的格式和性质基本一致，但是在COPY基础上增加了一些功能。
+
+比如 `<源路径>`可以是一个URL,这种情况下Docker引擎会视图去下载这个链接的文件放到 `<目标路径>`去。下载后的文件权限自动设置为600，如果这并不是想要的权限，还要增加额外的一层RUN进行权限调整。另外，如果下载但是个压缩包，需要解压缩，也一样需要额外的一层RUN指令进行解压缩。所以不如直接使用RUN,然后用wget或者curl工具下载，处理权限、解压缩、然后清理无用文件更合理。因此这个功能其实并不好用，而且不推荐使用
+
+如果`<源路径>`为一个tar压缩文件，压缩格式为gzip,bzip2以及xz的情况下，ADD指令将会自动解压缩这个压缩文件到 `<目标路径>`去。
+
+在某些情况下，这个自动解压功能非常有用，比如官方镜像ubuntu中
+
+```shell
+FROM scratch
+ADD ubuntu-xenial-core-cloudimg-amd64-root.tar.gz /
+```
+
+在某些情况下，希望复制压缩文件而不解压就不用ADD命令了，在Dockerfile最佳实践文档中要求，尽可能使用COPY，因为它的语义很明确，就是复制文件而已，而ADD则包含了更复杂的功能，其行为也不一定很清晰。最适合用ADD的场合就是所提及的需要自动解压缩的场合。ADD指令会令镜像构建缓存失败，从而可能会令镜像构建变得比较缓慢。
+
+因此COPY与ADD指令选择可以遵循这样的原则，所有文件复制均使用COPY指令，仅在需要自动解压缩的时候使用ADD
+
+
+
+
+
